--- a/index.html
+++ b/index.html
@@ -323,8 +323,8 @@
       <a href="#none"><img src="./images/scent/origin1.png" alt="티트리"></a>
       <p class="origintitle">TEA TREE</p>
       <p class="origintext">티트리의 강렬하면서 달콤한 향은 활력과 생기를 줍니다.
-        <br>외부의 스트레스로부터 마음이 괴로워 심신이 지칠 때 힘을 주어
-        <br>어려운 상황에서도 대처할 수 있는 여유로움을 갖도록 도와줍니다.
+        외부의 스트레스로부터 마음이 괴로워 심신이 지칠 때 힘을 주어
+        어려운 상황에서도 대처할 수 있는 여유로움을 갖도록 도와줍니다.
       </p>
     </li>
 
@@ -332,8 +332,8 @@
       <a href="#none"><img src="./images/scent/origin2.png" alt="로즈마리"></a>
       <p class="origintitle">ROSEMARY</p>
       <p class="origintext">로즈마리는 에너지를 끌어올려주고, 순환을 증진시키는 힘을 갖고 있어
-        <br>피부와 두피 케어를 위해 꾸준히 선택 되어왔습니다. 로즈마리의 짙은 향기는
-        <br>활력의 상징으로 무력함을 깨우고 명료함을 가지는데 도움을 줍니다.
+        피부와 두피 케어를 위해 꾸준히 선택 되어왔습니다. 로즈마리의 짙은 향기는
+        활력의 상징으로 무력함을 깨우고 명료함을 가지는데 도움을 줍니다.
       </p>
     </li>
 
@@ -341,8 +341,8 @@
       <a href="#none"><img src="./images/scent/origin3.png" alt="유칼립투스"></a>
       <p class="origintitle">EUCALYPTUS</p>
       <p class="origintext">시원한 향기는 답답하게 닫힌 마음을 통쾌하게 씻어 내려주어
-        <br>내적인 여유 공간을 만들어줍니다. 새로운 날개를 펴듯 움츠러든 몸과
-        <br>마음에 활력을 불어넣어 앞으로 전진할 수 있는 에너지를 선사합니다.
+        내적인 여유 공간을 만들어줍니다. 새로운 날개를 펴듯 움츠러든 몸과
+        마음에 활력을 불어넣어 앞으로 전진할 수 있는 에너지를 선사합니다.
       </p>
     </li>
 
@@ -350,8 +350,8 @@
       <a href="#none"><img src="./images/scent/origin4.png" alt="바질"></a>
       <p class="origintitle">BASIL</p>
       <p class="origintext">역동적이고 활기찬 느낌의 바질 에센셜오일의 톡 쏘는 향기는 머리를
-        <br>맑게 하여 집중력을 높여주고, 현실에 안주하고
-        <br>침울한 기분일 때 의욕을 북돋아 주는데 도움이 됩니다.
+        맑게 하여 집중력을 높여주고, 현실에 안주하고
+        침울한 기분일 때 의욕을 북돋아 주는데 도움이 됩니다.
       </p>
     </li>
 
@@ -359,8 +359,8 @@
       <a href="#none"> <img src="./images/scent/origin5.png" alt="그레이프프룻"></a>
       <p class="origintitle">GRAPEFRUIT</p>
       <p class="origintext">스윗한 시트러스 향기가 긍정적인 행복감을 느끼게 만들어 새롭게
-        <br>시작할 수 있는 활기찬 에너지를 선사합니다. 미묘하고 복잡한 감정을
-        <br> 시원하게 정화시켜 주며, 지나친 스트레스가 불필요한 긴장감을 내려놓아 줍니다.
+        시작할 수 있는 활기찬 에너지를 선사합니다. 미묘하고 복잡한 감정을
+        시원하게 정화시켜 주며, 지나친 스트레스가 불필요한 긴장감을 내려놓아 줍니다.
       </p>
     </li>
 
@@ -369,7 +369,7 @@
       <a href="#none"><img src="./images/scent/origin6.png" alt="버가못"></a>
       <p class="origintitle">BERGAMOT</p>
       <p class="origintext">신선하고 프룻티한 버가못 에센셜오일의 향기는 화창하고 따뜻한 기질을
-        <br>가지고 있어 자신감을 되찾고 기쁨을 불러 일으켜 마음을 온화하게 해줍니다.
+        가지고 있어 자신감을 되찾고 기쁨을 불러 일으켜 마음을 온화하게 해줍니다.
       </p>
     </li>
 
@@ -377,8 +377,8 @@
       <a href="#none"><img src="./images/scent/origin7.png" alt="차모마일 저먼"></a>
       <p class="origintitle">CHAMOMILE GERMAN</p>
       <p class="origintext">캐모마일 저먼의 향은 상쾌하고 부드럽게 어우러진 조화로, 마치 햇살 가득한 정원을
-        <br>거닐며 신선한 공기를 마시는 듯한 느낌을 전해줍니다. 그 향기는 마음을 차분하게
-        <br>만들어주며, 자연 속에서의 평온한 순간을 상상하게 합니다.
+        거닐며 신선한 공기를 마시는 듯한 느낌을 전해줍니다. 그 향기는 마음을 차분하게
+        만들어주며, 자연 속에서의 평온한 순간을 상상하게 합니다.
       </p>
     </li>
 
@@ -386,8 +386,8 @@
       <a href="#none"><img src="./images/scent/origin8.png" alt="주니퍼 베리"></a>
       <p class="origintitle">JUNIPER BERRY</p>
       <p class="origintext">나뭇잎의 푸르른 신선함이 전해지는 코니퍼노트와 베리 열매 특유의 스윗함이
-        <br>더해져 정신없이 분산된 에너지를 하나로 모아주고 기분을 상쾌하게 만들어 줍니다.
-        <br>답답하게 막혀있던 복잡 모호한 생각에 명쾌한 아이디어를 선사합니다.
+        더해져 정신없이 분산된 에너지를 하나로 모아주고 기분을 상쾌하게 만들어 줍니다.
+        답답하게 막혀있던 복잡 모호한 생각에 명쾌한 아이디어를 선사합니다.
       </p>
     </li>
   </ul>
