--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
 
   <div class="footer">
     <div class="foot1">
-      <img src="./images/foot/foot_logo.png" alt="풋로고" class="foot_logo">
+      <a href="#"><img src="./images/foot/foot_logo.png" alt="풋로고" class="foot_logo"></a>
       <ul class="foot_ul_right">
         <li><a href="https://www.instagram.com/"><img src="./images/foot/instagram.png" alt="인스타" class="sns"></a></li>
         <li><a href="https://www.facebook.com/"><img src="./images/foot/facebook.png" alt="페이스북" class="sns"></a></li>
