--- a/index.html
+++ b/index.html
@@ -298,7 +298,6 @@
   </p>
   <div class="scentvideo">
     <video src="./video/Chamomile.mp4" width="1320" autoplay loop muted playsinline> </video>
-
     <ul class="Chamomile">
       <li data-aos="fade-up">
         <p class="text1">Chamomile</p>
@@ -306,9 +305,7 @@
           <br>카모마일은 지친 하루 끝, 마음을 조용히 감싸주는 위로입니다.
           <br>은은한 꽃내음 속에 스며든 포근함이 나를 잠시 쉬어가게 해주는, 다정한 순간.
           <br>
-
         </p>
-
       </li>
     </ul>
   </div>
@@ -396,37 +393,63 @@
   <div class="swiper review">
     <div class="swiper-wrapper">
       <div class="swiper-slide">
-        <a href="#none"><img src="./images/review/리뷰1.png" alt="이미지1">
+        <a href="#none"><img src="./images/review/리뷰1.png" alt="수분샴푸">
 
         </a>
       </div>
       <div class="swiper-slide">
-        <a href="#none"><img src="./images/review/리뷰6.png" alt="이미지1">
+        <a href="#none"><img src="./images/review/리뷰6.png" alt="바디워시">
 
         </a>
       </div>
       <div class="swiper-slide">
-        <a href="#none"><img src="./images/review/리뷰2.png" alt="이미지1">
+        <a href="#none"><img src="./images/review/리뷰2.png" alt="섬유향수">
 
         </a>
       </div>
       <div class="swiper-slide">
-        <a href="#none"><img src="./images/review/리뷰3.png" alt="이미지1">
-
-        </a>
-      </div>.
-
-      <div class="swiper-slide">
-        <a href="#none"><img src="./images/review/리뷰4.png" alt="이미지1">
+        <a href="#none"><img src="./images/review/리뷰3.png" alt="향초">
 
         </a>
       </div>
 
       <div class="swiper-slide">
-        <a href="#none"><img src="./images/review/리뷰5.png" alt="이미지1">
+        <a href="#none"><img src="./images/review/리뷰7.png" alt="샴푸">
 
         </a>
       </div>
+
+      <div class="swiper-slide">
+        <a href="#none"><img src="./images/review/리뷰5.png" alt="바디워시">
+
+        </a>
+      </div>
+
+      
+      <div class="swiper-slide">
+        <a href="#none"><img src="./images/review/리뷰4.png" alt="비누">
+
+        </a>
+      </div>
+
+          <div class="swiper-slide">
+        <a href="#none"><img src="./images/review/리뷰8.png" alt="섬유향수">
+
+        </a>
+      </div>
+
+           <div class="swiper-slide">
+        <a href="#none"><img src="./images/review/리뷰9.png" alt="올인원">
+
+        </a>
+      </div>
+
+             <div class="swiper-slide">
+        <a href="#none"><img src="./images/review/리뷰10.png" alt="선크림">
+
+        </a>
+      </div>
+
 
     </div>
   </div>
