--- a/index.html
+++ b/index.html
@@ -23,31 +23,31 @@
   <div id="header">
     <div class="header">
       <a href="#" class="logo"><img src="./images/header/logo.png" alt="탑로고이미지"></a>
-      <div class="nav">
-        <ul class="right">
-          <li><a href="#"><img src="./images/header/LOGIN.png" alt=""></a></li>
-          <li><a href="#"><img src="./images/header/search.png" alt=""></a></li>
-          <li><a href="#"><img src="./images/header/local_mall.png" alt=""></a></li>
-        </ul>
-        <ul class="menu">
-          <li><a href="#story">브랜드스토리</a>
-          </li>
-          <li><a href="#product">제품</a>
-          </li>
-          <li><a href="#event">이벤트</a>
+      <!-- <div class="nav"> -->
 
-          </li>
-          <li><a href="#scent">향기</a>
+      <ul class="menu">
+        <li><a href="#story">브랜드스토리</a>
+        </li>
+        <li><a href="#product">제품</a>
+        </li>
+        <li><a href="#event">이벤트</a>
 
-          </li>
-          <li><a href="#review">리뷰</a>
+        </li>
+        <li><a href="#scent">향기</a>
 
-          </li>
-        </ul>
+        </li>
+        <li><a href="#review">리뷰</a>
 
-      </div>
+        </li>
+      </ul>
+      <ul class="right">
+        <li><a href="#"><img src="./images/header/LOGIN.png" alt=""></a></li>
+        <li><a href="#"><img src="./images/header/search.png" alt=""></a></li>
+        <li><a href="#"><img src="./images/header/local_mall.png" alt=""></a></li>
+      </ul>
     </div>
   </div>
+  <!-- </div> -->
 
   <!-- Swiper 메인 돌아가는 배너 -->
   <div class="swiper mySwiper">
@@ -425,26 +425,26 @@
         </a>
       </div>
 
-      
+
       <div class="swiper-slide">
         <a href="#none"><img src="./images/review/리뷰4.png" alt="비누">
 
         </a>
       </div>
 
-          <div class="swiper-slide">
+      <div class="swiper-slide">
         <a href="#none"><img src="./images/review/리뷰8.png" alt="섬유향수">
 
         </a>
       </div>
 
-           <div class="swiper-slide">
+      <div class="swiper-slide">
         <a href="#none"><img src="./images/review/리뷰9.png" alt="올인원">
 
         </a>
       </div>
 
-             <div class="swiper-slide">
+      <div class="swiper-slide">
         <a href="#none"><img src="./images/review/리뷰10.png" alt="선크림">
 
         </a>
