--- a/index.html
+++ b/index.html
@@ -263,33 +263,40 @@
   <div id="event"></div>
   <!-- class에 swiper부분은 수정 금지!!! -->
   <h3 class="title">EVENT</h3>
-  <div class="swiper event">
-    <div class="swiper-wrapper">
-      <div class="swiper-slide">
-        <a href="#"><img src="./images/event/event1.jpg" alt="이벤트올인원">
-          <h2>💧 여름이니까 더 가볍게! 올인원 ~30%</h2>
-          <h3>6.30(월) 오전 12:00 ~ 7.5(금) 오후 11:59</h3>
-        </a>
-      </div>
-      <div class="swiper-slide">
-        <a href="#"> <img src="./images/event/event3.jpg" alt="이벤트미스트">
-          <h2>😄 요즘은 향수 대신 패브릭 미스트!</h2>
-          <h3>6.30(월) 오전 12:00 ~ 7.4(금) 오후 11:59</h3>
-        </a>
-      </div>
-      <div class="swiper-slide">
-        <a href="#"><img src="./images/event/event4.jpg" alt="이벤트슬리핑마스크">
-          <h2>🎉 슬리핑 마스크 출시 기념 </h2>
-          <h3>7.1(화) 오전 12:00 ~ 7.7(월) 오후 11:59</h3>
-        </a>
-      </div>
-      <div class="swiper-slide">
-        <a href="#"> <img src="./images/event/event2.jpg" alt="이벤트출석체크">
-          <h2>매일매일 출석체크하면 총 10,000원의 혜택이!</h2>
-          <h3>7.1(화) 오전 12:00 ~ 7.31(목) 오후 11:59</h3>
-        </a>
+  <div class="eventbox">
+    <div class="swiper event">
+      <div class="swiper-wrapper">
+        <div class="swiper-slide">
+          <a href="#"><img src="./images/event/event1.jpg" alt="이벤트올인원">
+            <h2>💧 여름이니까 더 가볍게! 올인원 ~30%</h2>
+            <h3>6.30(월) 오전 12:00 ~ 7.5(금) 오후 11:59</h3>
+          </a>
+        </div>
+        <div class="swiper-slide">
+          <a href="#"> <img src="./images/event/event3.jpg" alt="이벤트미스트">
+            <h2>😄 요즘은 향수 대신 패브릭 미스트!</h2>
+            <h3>6.30(월) 오전 12:00 ~ 7.4(금) 오후 11:59</h3>
+          </a>
+        </div>
+        <div class="swiper-slide">
+          <a href="#"><img src="./images/event/event4.jpg" alt="이벤트슬리핑마스크">
+            <h2>🎉 슬리핑 마스크 출시 기념 </h2>
+            <h3>7.1(화) 오전 12:00 ~ 7.7(월) 오후 11:59</h3>
+          </a>
+        </div>
+        <div class="swiper-slide">
+          <a href="#"> <img src="./images/event/event2.jpg" alt="이벤트출석체크">
+            <h2>매일매일 출석체크하면 총 10,000원의 혜택이!</h2>
+            <h3>7.1(화) 오전 12:00 ~ 7.31(목) 오후 11:59</h3>
+          </a>
+        </div>
       </div>
     </div>
+    <!-- 화살표 버튼 -->
+    <div class="swiper-button-next"></div>
+    <div class="swiper-button-prev"></div>
+    <!-- 블릿 버튼 -->
+      <div class="swiper-pagination"></div>
   </div>
   <div id="scent"></div>
   <p class="scent">NAEUM’s SCENT</p>
@@ -452,6 +459,7 @@
 
 
     </div>
+
   </div>
 
 
