--- a/index.html
+++ b/index.html
@@ -524,5 +524,5 @@
   <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
   <script src="./script/slide.js"></script>
 
-
+</body>
 </html>
